# AdversarialPrefetch

./: .gitignore  README.md
covert_channels/: CMakeLists.txt  receiver_pre_pre.c  receiver_pre_relo.c  sender.c
covert_channels/libs/: .util.h.swp  util.c  util.h
utils/: get_llc_s_latency.sh  get_prefetch_miss_latency.sh  llc_s_latency.c  pre_miss_latency.c  process_pp.py  process_pr.py  shared
